chore(CI): fix actions permissions

--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "node": ">=16.14"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   }
 }
