--- a/package.json
+++ b/package.json
@@ -110,33 +110,33 @@
   "dependencies": {
     "@floating-ui/react-dom": "^2.0.1",
     "@sanity/icons": "^2.4.1",
-    "@sanity/ui": "1.7.1",
-    "@vercel/stega": "0.0.5",
+    "@sanity/ui": "^1.7.1",
+    "@vercel/stega": "0.1.0",
     "nanoid": "^4.0.2",
     "react-intersection-observer": "^9.4.4",
-    "scroll-into-view-if-needed": "3.0.10"
+    "scroll-into-view-if-needed": "^3.0.10"
   },
   "devDependencies": {
-    "@sanity/pkg-utils": "2.3.3",
-    "@sanity/semantic-release-preset": "4.1.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "@types/styled-components": "5.1.26",
-    "@typescript-eslint/eslint-plugin": "6.0.0",
-    "@typescript-eslint/parser": "6.0.0",
-    "eslint": "8.44.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-simple-import-sort": "10.0.0",
-    "ls-engines": "0.9.0",
+    "@sanity/pkg-utils": "^2.3.3",
+    "@sanity/semantic-release-preset": "^4.1.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "ls-engines": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-is": "^18",
-    "rimraf": "5.0.1",
-    "styled-components": "5.3.11",
-    "typescript": "5.1.6"
+    "rimraf": "^5.0.1",
+    "styled-components": "^5.2.3",
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
     "react": "^18",
