--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,45 +37,62 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      TURBO_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      TURBO_TEAM: sanity-io
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@d882d12c64e032187b2edb46d3a0d003b7a43598 # v2.4.0
       - uses: actions/setup-node@v3
         with:
+          cache: pnpm
           node-version: lts/*
-          cache: npm
-      - run: npm ci
-      - run: npm run lint
+      - run: corepack enable && pnpm --version
+      - run: pnpm install
+      - run: pnpm lint
+      - run: pnpm run -r prepublishOnly
         if: github.event.inputs.test != 'false'
-      - run: npm run prepublishOnly
 
   test:
     needs: build
+    # The test matrix can be skipped, in case a new release needs to be fast-tracked and tests are already passing on main
     if: github.event.inputs.test != 'false'
-    runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
     strategy:
+      # A test failing on windows doesn't mean it'll fail on macos. It's useful to let all tests run to its completion to get the full picture
       fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-        node: [lts/*]
+        # https://nodejs.org/en/about/releases/
+        # https://pnpm.io/installation#compatibility
+        # Includes the lowest version supported by preview-kit (defined in pkg.engines.node) and the upcoming version in development
+        node: [lts/-1, lts/*, current]
+        os: [ubuntu-latest]
+        # Also test the LTS on mac and windows
         include:
-          - os: ubuntu-latest
-            node: lts/-1
-          - os: ubuntu-latest
-            node: current
+          - os: macos-latest
+            node: lts/*
+          - os: windows-latest
+            node: lts/*
+    runs-on: ${{ matrix.os }}
+    env:
+      NODE_VERSION: ${{ matrix.node }}
+      TURBO_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      TURBO_TEAM: sanity-io
     steps:
-      - name: Set git to use LF
-        if: matrix.os == 'windows-latest'
+      # It's only necessary to do this for windows, as mac and ubuntu are sane OS's that already use LF
+      - if: matrix.os == 'windows-latest'
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@d882d12c64e032187b2edb46d3a0d003b7a43598 # v2.4.0
       - uses: actions/setup-node@v3
         with:
+          cache: pnpm
           node-version: ${{ matrix.node }}
-          cache: npm
-      - run: npm i
-      - run: npm test
-      - run: npx ls-engines
+      - run: corepack enable && pnpm --version
+      - run: pnpm install --loglevel=error
+      - run: pnpm test
 
   release:
     permissions:
@@ -93,17 +110,18 @@ jobs:
           # Need to fetch entire commit history to
           # analyze every commit since last release
           fetch-depth: 0
+      - uses: pnpm/action-setup@d882d12c64e032187b2edb46d3a0d003b7a43598 # v2.4.0
       - uses: actions/setup-node@v3
         with:
+          cache: pnpm
           node-version: lts/*
-          cache: npm
-      - run: npm ci
-      - run: npm audit signatures
-        # Branches that will release new versions are defined in .releaserc.json
-      - run: npm run release
+      - run: corepack enable && pnpm --version
+      - run: pnpm install --loglevel=error
+      - run: pnpm run -r release
         # Don't allow interrupting the release step if the job is cancelled, as it can lead to an inconsistent state
         # e.g. git tags were pushed but it exited before `npm publish`
         if: always()
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+  
