--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -7,32 +7,28 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref_name }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
-
-permissions:
-  contents: read
 
 jobs:
   run:
     name: Can the code be prettier? 🤔
     runs-on: ubuntu-latest
-    # workflow_dispatch always lets you select the branch ref, even though in this case we only ever want to run the action on `main` this we need an if check
-    if: ${{ github.ref_name == 'main' }}
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@d882d12c64e032187b2edb46d3a0d003b7a43598 # v2.4.0
       - uses: actions/setup-node@v3
         with:
-          cache: npm
+          cache: pnpm
           node-version: lts/*
-      - run: npm ci --ignore-scripts
+      - run: pnpm install --dev --ignore-scripts
       - uses: actions/cache@v3
         with:
           path: node_modules/.cache/prettier/.prettier-cache
-          key: prettier-${{ hashFiles('package-lock.json') }}-${{ hashFiles('.gitignore') }}
-      - run: npx prettier --ignore-path .gitignore --cache --write .
+          key: prettier-${{ hashFiles('pnpm-lock.yaml') }}-${{ hashFiles('.prettierignore') }}-${{ hashFiles('.prettierrc.cjs') }}
+      - run: pnpm format
       - run: git restore .github/workflows
-      - uses: tibdex/github-app-token@b62528385c34dbc9f38e5f4225ac829252d1ea92 # v1
+      - uses: tibdex/github-app-token@0d49dd721133f900ebd5e0dff2810704e8defbc6 # v1
         id: generate-token
         with:
           app_id: ${{ secrets.ECOSPARK_APP_ID }}
@@ -40,9 +36,10 @@ jobs:
       - uses: peter-evans/create-pull-request@153407881ec5c347639a548ade7d8ad1d6740e38 # v5
         with:
           author: github-actions <41898282+github-actions[bot]@users.noreply.github.com>
-          body: I ran `npx prettier --ignore-path .gitignore --cache --write .` 🧑‍💻
-          branch: actions/prettier-if-needed
+          body: I ran `pnpm format` 🧑‍💻
+          branch: actions/prettier
           commit-message: 'chore(prettier): 🤖 ✨'
           labels: 🤖 bot
           title: 'chore(prettier): 🤖 ✨'
           token: ${{ steps.generate-token.outputs.token }}
+  
