chore: add semantic release dep

--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -136,6 +136,7 @@
     "react-dom": "^18",
     "react-is": "^18",
     "rimraf": "^5.0.1",
+    "semantic-release": "^21.1.1",
     "styled-components": "^5.2.3",
     "typescript": "^5.1.6"
   },
