--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "13.4.19",
+    "@sanity/overlays": "workspace:*",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -19,6 +21,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.2.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
