--- a/apps/nuxt/turbo.json
+++ b/apps/nuxt/turbo.json
@@ -3,7 +3,7 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "outputs": [".nuxt/**"]
+      "outputs": [".nuxt/**", ".output/**"]
     }
   }
 }
