--- a/apps/nuxt/turbo.json
+++ b/apps/nuxt/turbo.json
@@ -4,6 +4,9 @@
   "pipeline": {
     "build": {
       "outputs": [".nuxt/**", ".output/**"]
+    },
+    "generate": {
+      "outputs": ["dist/**"]
     }
   }
 }
