--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
           cache: pnpm
           node-version: lts/*
       - run: corepack enable && pnpm --version
-      - run: pnpm install
+      - run: pnpm install --ignore-scripts
       - run: pnpm lint
         if: github.event.inputs.test != 'false'
       - run: pnpm build
@@ -92,7 +92,7 @@ jobs:
           cache: pnpm
           node-version: ${{ matrix.node }}
       - run: corepack enable && pnpm --version
-      - run: pnpm install --loglevel=error
+      - run: pnpm install --loglevel=error --ignore-scripts
       - run: pnpm test
 
   release:
@@ -117,7 +117,7 @@ jobs:
           cache: pnpm
           node-version: lts/*
       - run: corepack enable && pnpm --version
-      - run: pnpm install --loglevel=error
+      - run: pnpm install --loglevel=error --ignore-scripts
       - run: pnpm run -r release
         # Don't allow interrupting the release step if the job is cancelled, as it can lead to an inconsistent state
         # e.g. git tags were pushed but it exited before `npm publish`
