--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "13.4.19",
+    "@sanity/composer": "workspace:*",
     "@sanity/overlays": "workspace:*",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
@@ -19,9 +20,11 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "next-sanity": "^5.4.6",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sanity": "^3.16.4",
     "styled-components": "^5.3.11",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
