--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.8.0",
-    "@sanity/overlays": "workspace:*"
+    "@sanity/composer": "workspace:*",
+    "@sanity/overlays": "workspace:*",
+    "rxjs": "^7.8.1",
+    "sanity": "^3.16.4"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
