fix: make nuxt app react wrapper components client only

--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,9 @@
       "persistent": true
     },
     "lint": {},
-    "test": {}
+    "test": {},
+    "preview": {
+      "dependsOn": ["build"]
+    }
   }
 }
