--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "turbo run dev --filter=./apps/*",
     "format": "prettier --cache --write .",
     "lint": "turbo run lint",
+    "preview": "turbo run preview",
     "test": "turbo run test"
   },
   "devDependencies": {
