--- a/.prettierignore
+++ b/.prettierignore
@@ -1,11 +1,13 @@
 .cache
-.vercel
-.turbo
-.sanity
 .github/workflows/*.yml
+.release-please-manifest.json
+.sanity
+.turbo
+.vercel
 apps/*/.next
 apps/*/build
 apps/*/dist
 apps/*/public/build
+CHANGELOG.md
 packages/*/dist
 pnpm-lock.yaml
