--- a/turbo.json
+++ b/turbo.json
@@ -1,20 +1,28 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
-  "globalEnv": ["RUNNER_OS", "NODE_VERSION"],
+  "globalEnv": ["RUNNER_OS"],
   "pipeline": {
     "build": {
+      "outputs": ["dist/**"],
       "dependsOn": ["^build"]
+    },
+    "test": {
+      "env": ["GITHUB_ACTIONS"],
+      "dependsOn": ["^build"],
+      "cache": false
+    },
+    "lint": {},
+    "typecheck": {
+      "env": ["GITHUB_ACTIONS"],
+      "dependsOn": ["^build"]
+    },
+    "preview": {
+      "dependsOn": ["build"]
     },
     "dev": {
       "dependsOn": ["^build"],
-      "cache": false,
       "persistent": true
-    },
-    "lint": {},
-    "test": {},
-    "preview": {
-      "dependsOn": ["build"]
     }
   }
 }
