--- a/.github/workflows/lint-fix.yml
+++ b/.github/workflows/lint-fix.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: lts/*
       - name: Authenticate with private NPM package @sanity/sanitype
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPMRC }}" > ~/.npmrc
-      - run: pnpm install --ignore-scripts
+      - run: pnpm install --ignore-scripts --no-frozen-lockfile
       - run: pnpm lint:fix
       - uses: tibdex/github-app-token@0d49dd721133f900ebd5e0dff2810704e8defbc6 # v1
         id: generate-token
