chore: fix prettier job

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -26,7 +26,10 @@ jobs:
           node-version: lts/*
       - name: Authenticate with private NPM package @sanity/sanitype
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPMRC }}" > ~/.npmrc
-      - run: pnpm install --dev --ignore-scripts --no-frozen-lockfile
+
+      - run: pnpm install --ignore-scripts --no-frozen-lockfile
+      # Can't be used due to --no-frozen-lockfile
+      # - run: pnpm install --dev --ignore-scripts --no-frozen-lockfile
       - uses: actions/cache@v3
         with:
           path: node_modules/.cache/prettier/.prettier-cache
