chore: missing prefix

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,7 +3,7 @@
   "bump-minor-pre-major": true,
   "bump-patch-for-minor-pre-major": true,
   "packages": {
-    "composer": {
+    "packages/composer": {
       "release-as": "0.0.1"
     },
     "packages/overlays": {
