--- a/apps/nextjs/turbo.json
+++ b/apps/nextjs/turbo.json
@@ -3,6 +3,8 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
+      "dotEnv": [".env", ".env.local"],
+      "env": ["NEXT_PUBLIC_SANITY_*", "NEXT_PUBLIC_VERCEL_ENV"],
       "outputs": [".next/**", "!.next/cache/**"]
     }
   }
