chore: prepare private releases

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -118,7 +118,7 @@
     "node": ">=16.14"
   },
   "publishConfig": {
-    "access": "public",
-    "provenance": true
+    "access": "protected",
+    "provenance": false
   }
 }
