chore: fix release

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,11 +3,8 @@
   "bump-minor-pre-major": true,
   "bump-patch-for-minor-pre-major": true,
   "packages": {
-    "packages/composer": {
-      "release-as": "0.0.1"
-    },
+    "packages/composer": {},
     "packages/overlays": {
-      "release-as": "0.0.0",
       "prerelease": true
     }
   }
