--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -48,5 +48,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH_TOKEN}}
       # Release Please has already incremented versions and published tags, so we just
       # need to publish all unpublished versions to NPM here
-      - run: pnpm -r publish
+      - run: pnpm -r publish --no-git-checks
+      # Because of --no-frozen-lockfile we have to disable git checks
+      # - run: pnpm -r publish
         # if: ${{ steps.release.outputs.releases_created }}
