--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -35,7 +35,7 @@ jobs:
           path: node_modules/.cache/prettier/.prettier-cache
           key: prettier-${{ hashFiles('pnpm-lock.yaml') }}-${{ hashFiles('.prettierignore') }}-${{ hashFiles('package.json') }}
       - run: pnpm format
-      - run: git restore .github/workflows
+      - run: git restore .github/workflows pnpm-lock.yaml
       - uses: tibdex/github-app-token@0d49dd721133f900ebd5e0dff2810704e8defbc6 # v1
         id: generate-token
         with:
