fix(deps): install `pink-lizard` tag

--- a/package.json
+++ b/package.json
@@ -27,7 +27,21 @@
   "packageManager": "pnpm@8.7.4",
   "pnpm": {
     "overrides": {
-      "sanity": "file:./.npm-registry/sanity-v3.16.4.tgz"
+      "@sanity/block-tools": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "@sanity/cli": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "@sanity/diff": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "@sanity/export": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "@sanity/import": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "@sanity/import-cli": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "@sanity/mutator": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "@sanity/portable-text-editor": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "@sanity/schema": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "@sanity/types": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "@sanity/util": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "@sanity/vision": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "create-sanity": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "groq": "3.16.5-pink-lizard.22+5a2f9bcd91",
+      "sanity": "3.16.5-pink-lizard.22+5a2f9bcd91"
     }
   }
 }
