--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,7 +3,9 @@
   "bump-minor-pre-major": true,
   "bump-patch-for-minor-pre-major": true,
   "packages": {
-    "packages/composer": {},
+    "packages/composer": {
+      "release-as": "0.1.0"
+    },
     "packages/overlays": {
       "prerelease": true
     }
