--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,11 +1,8 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "bump-minor-pre-major": true,
-  "bump-patch-for-minor-pre-major": true,
   "packages": {
-    "packages/composer": {
-      "release-as": "0.1.0"
-    },
+    "packages/composer": {},
     "packages/overlays": {
       "prerelease": true
     }
