--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Authenticate with private NPM package @sanity/sanitype
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPMRC }}" > ~/.npmrc
       - name: install deps & build
-        run: corepack enable && pnpm --version && pnpm install --ignore-scripts --no-frozen-lockfile
+        run: corepack enable && pnpm --version && pnpm install --ignore-scripts
         if: ${{ steps.release.outputs.releases_created }}
       - name: Set publishing config
         run: pnpm config set '//registry.npmjs.org/:_authToken' "${NODE_AUTH_TOKEN}"
@@ -48,8 +48,5 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH_TOKEN}}
       # Release Please has already incremented versions and published tags, so we just
       # need to publish all unpublished versions to NPM here
-      - run: pnpm -r publish --no-git-checks
-        if: ${{ steps.release.outputs.releases_created }}
-      # Because of --no-frozen-lockfile we have to disable git checks
-      # - run: pnpm -r publish
+      - run: pnpm -r publish
       
