chore(renovate): pink-lizard should not be mentioned in the changelog

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -46,7 +46,8 @@
       "schedule": ["at any time"],
       "rangeStrategy": "pin",
       "groupSlug": "pink-lizard",
-      "automerge": true
+      "automerge": true,
+      "semanticCommitType": "chore"
     }
   ]
 }
