--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -38,6 +38,7 @@ jobs:
           node-version: lts/*
       - name: Authenticate with private NPM package @sanity/sanitype
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPMRC }}" > ~/.npmrc
+        if: ${{ steps.release.outputs.releases_created }}
       - name: install deps & build
         run: corepack enable && pnpm --version && pnpm install --ignore-scripts
         if: ${{ steps.release.outputs.releases_created }}
@@ -49,4 +50,5 @@ jobs:
       # Release Please has already incremented versions and published tags, so we just
       # need to publish all unpublished versions to NPM here
       - run: pnpm -r publish
+        if: ${{ steps.release.outputs.releases_created }}
       
