--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,7 @@
       "dependsOn": ["^build"]
     },
     "preview": {
-      "dependsOn": ["build"]
+      "dependsOn": ["^build"]
     },
     "dev": {
       "dependsOn": ["^build"],
