chore(renovate): only pin overrides

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -42,6 +42,7 @@
 "groq",
 "sanity"
       ],
+      "matchFileNames": ["package.json"],
       "followTag": "pink-lizard",
       "schedule": ["at any time"],
       "rangeStrategy": "pin",
