chore: import `preview-kit`

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,6 +5,10 @@
     "packages/composer": {},
     "packages/overlays": {
       "prerelease": true
+    },
+    "packages/preview-kit": {
+      "prerelease": true,
+      "release-as": "0.0.0"
     }
   }
 }
