--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -11,6 +11,8 @@
 		"lint": "eslint ."
 	},
 	"devDependencies": {
+		"@sanity/composer": "workspace:*",
+    "@sanity/overlays": "workspace:*",
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
