chore(renovate): downgrade `pink-lizard` to test update config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -42,6 +42,7 @@
         "groq",
         "sanity"
       ],
+      "matchDepTypes": ["overrides"],
       "followTag": "pink-lizard",
       "schedule": ["at any time"],
       "rangeStrategy": "pin",
