chore(renovate): only match root

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -42,7 +42,7 @@
         "groq",
         "sanity"
       ],
-      "matchDepTypes": ["overrides"],
+      "matchFileNames": ["package.json"],
       "followTag": "pink-lizard",
       "schedule": ["at any time"],
       "rangeStrategy": "pin",
