--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -42,7 +42,7 @@
         "groq",
         "sanity"
       ],
-      "matchFileNames": ["package.json"],
+      "matchDepTypes": ["dependencies"],
       "followTag": "pink-lizard",
       "schedule": ["at any time"],
       "rangeStrategy": "pin",
