--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -113,6 +113,7 @@
     "@vercel/stega": "0.1.0",
     "nanoid": "^5.0.1",
     "react-intersection-observer": "^9.5.2",
+    "sanity": "^3.16.4",
     "scroll-into-view-if-needed": "^3.0.10"
   },
   "devDependencies": {
