chore(deps): remove unused

--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -107,14 +107,11 @@
     "root": true
   },
   "dependencies": {
-    "@floating-ui/react-dom": "^2.0.2",
     "@sanity/icons": "^2.4.1",
     "@sanity/ui": "^1.8.2",
     "@vercel/stega": "0.1.0",
     "nanoid": "^5.0.1",
-    "react-intersection-observer": "^9.5.2",
-    "sanity": "^3.16.4",
-    "scroll-into-view-if-needed": "^3.0.10"
+    "sanity": "^3.16.4"
   },
   "devDependencies": {
     "@sanity/pkg-utils": "^2.4.8",
