--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -12,6 +12,7 @@
     "@next/bundle-analyzer": "13.4.19",
     "@sanity/composer": "workspace:*",
     "@sanity/overlays": "workspace:*",
+    "@sanity/preview-kit": "workspace:*",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
