chore: add experimental PostMessage

--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -100,7 +100,8 @@
   },
   "dependencies": {
     "@sanity/ui": "^1.8.2",
-    "sanity": "3.16.5-pink-lizard.35"
+    "sanity": "3.16.5-pink-lizard.35",
+    "sanity-plugin-iframe-pane": "^2.5.7"
   },
   "devDependencies": {
     "react": "^18.2.0",
