--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -27,7 +27,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "3.16.5-pink-lizard.35",
+    "sanity-plugin-iframe-pane": "^2.5.7",
     "styled-components": "^5.3.11",
+    "suspend-react": "0.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
