chore(release): don't publish changelogs while private

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -24,8 +24,7 @@
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist",
-    "CHANGELOG.md"
+    "dist"
   ],
   "scripts": {
     "prebuild": "rimraf dist",
