--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -33,8 +33,7 @@
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist",
-    "CHANGELOG.md"
+    "dist"
   ],
   "scripts": {
     "prebuild": "rimraf dist",
