--- a/packages/overlays/tsconfig.build.json
+++ b/packages/overlays/tsconfig.build.json
@@ -5,7 +5,7 @@
     "outDir": "dist",
     "declaration": true,
     "emitDeclarationOnly": true,
-    "declarationDir": "lib/dts"
+    "declarationDir": "dist/dts"
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["dist", "node_modules"]
