--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@vercel/stega": "0.1.0",
+    "apps-common": "workspace:*",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
