feat(composer): basic panels (#48)
* chore(deps): install `@sanity/ui`

* feat(composer): basic panels

---------

Co-authored-by: Cody Olsen <81981+stipsan@users.noreply.github.com>

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -98,6 +98,7 @@
     "root": true
   },
   "dependencies": {
+    "@sanity/ui": "^1.8.2",
     "sanity": "3.16.5-pink-lizard.35"
   },
   "devDependencies": {
