--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -111,7 +111,8 @@
     "@sanity/ui": "^1.8.2",
     "@vercel/stega": "0.1.0",
     "nanoid": "^5.0.1",
-    "sanity": "^3.16.4"
+    "sanity": "^3.16.4",
+    "valibot": "^0.15.0"
   },
   "devDependencies": {
     "@sanity/pkg-utils": "^2.4.8",
