--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@sanity/composer": "workspace:*",
     "@sanity/overlays": "workspace:*",
+    "apps-common": "workspace:*",
     "rxjs": "^7.8.1",
     "sanity": "3.16.5-pink-lizard.35"
   },
