feat(apps): add example channels pages

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -19,6 +19,7 @@
     "@vercel/stega": "0.1.0",
     "apps-common": "workspace:*",
     "autoprefixer": "10.4.15",
+    "channels": "workspace:*",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
