--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -13,6 +13,7 @@
     "@sanity/composer": "workspace:*",
     "@sanity/overlays": "workspace:*",
     "apps-common": "workspace:*",
+    "channels": "workspace:*",
     "rxjs": "^7.8.1",
     "sanity": "3.16.5-pink-lizard.35"
   },
