--- a/apps/nextjs/tsconfig.json
+++ b/apps/nextjs/tsconfig.json
@@ -24,13 +24,15 @@
       "@sanity/composer": ["../../packages/composer/src"],
       "@sanity/overlays": ["../../packages/overlays/src"],
       "@sanity/preview-kit": ["../../packages/preview-kit/src"],
-      "apps-common": ["../apps-common/src"]
+      "apps-common": ["../apps-common/src"],
+      "channels": ["../../packages/channels/src"]
     }
   },
   "include": [
     "../../packages/composer/src",
     "../../packages/overlays/src",
     "../../packages/preview-kit/src",
+    "../../packages/channels/src",
     "../apps-common/src",
     "next-env.d.ts",
     "**/*.ts",
