--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint:fix": "pnpm lint -- --fix",
     "preview": "turbo run preview",
     "test": "turbo run test",
-    "typecheck": "turbo run typecheck"
+    "typecheck": "turbo run typecheck",
+    "watch": "turbo run watch"
   },
   "prettier": {
     "plugins": [
