feat: implement basic e2e event handling

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -99,6 +99,7 @@
   },
   "dependencies": {
     "@sanity/ui": "^1.8.2",
+    "channels": "workspace:*",
     "sanity": "3.16.5-pink-lizard.35"
   },
   "devDependencies": {
