--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -110,6 +110,7 @@
     "@sanity/icons": "^2.4.1",
     "@sanity/ui": "^1.8.2",
     "@vercel/stega": "0.1.0",
+    "channels": "workspace:*",
     "nanoid": "^5.0.1",
     "sanity": "^3.16.4",
     "valibot": "^0.15.0"
