--- a/turbo.json
+++ b/turbo.json
@@ -24,6 +24,9 @@
       "dependsOn": ["^build"],
       "cache": false,
       "persistent": true
+    },
+    "watch": {
+      "persistent": true
     }
   }
 }
