--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -18,7 +18,7 @@
     "sanity": "3.16.5-pink-lizard.35"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.2"
+    "@nuxt/devtools": "^0.8.5",
+    "nuxt": "^3.7.3"
   }
 }
