--- a/apps/nuxt/turbo.json
+++ b/apps/nuxt/turbo.json
@@ -2,6 +2,9 @@
   "$schema": "https://turbo.build/schema.json",
   "extends": ["//"],
   "pipeline": {
+    "build": {
+      "cache": false
+    },
     "generate": {
       "outputs": ["dist/**"]
     }
