--- a/apps/remix/tsconfig.json
+++ b/apps/remix/tsconfig.json
@@ -7,6 +7,7 @@
     "**/*.tsx"
   ],
   "compilerOptions": {
+    "skipLibCheck": true,
     "lib": ["DOM", "DOM.Iterable", "ES2019"],
     "isolatedModules": true,
     "esModuleInterop": true,
