chore(ci): configure turbo for remix

--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev",
+    "dev": "PORT=3003 remix dev",
     "typecheck": "tsc"
   },
   "dependencies": {
