--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier-plugin-packagejson": "2.4.5",
     "prettier-plugin-svelte": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4",
+    "syncpack": "11.2.1",
     "turbo": "1.10.14"
   },
   "packageManager": "pnpm@8.8.0",
