chore: attempt fixing context bug

--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -112,7 +112,7 @@
     "@vercel/stega": "0.1.0",
     "channels": "workspace:*",
     "nanoid": "^5.0.1",
-    "sanity": "^3.16.4",
+    "sanity": "3.16.5-pink-lizard.35",
     "valibot": "^0.15.0"
   },
   "devDependencies": {
