chore: fix access typo

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -121,7 +121,7 @@
     "node": ">=16.14"
   },
   "publishConfig": {
-    "access": "protected",
+    "access": "restricted",
     "provenance": false
   }
 }
