chore(deps): move to peers to fix source not found

--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -99,21 +99,26 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/ui": "^1.8.2",
-    "sanity": "3.16.5-pink-lizard.39",
-    "sanity-plugin-iframe-pane": "^2.5.7"
+    "@sanity/icons": "^2.4.1",
+    "@sanity/ui": "^1.8.2"
   },
   "devDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "styled-components": "^5.3.11",
+    "@sanity/pkg-utils": "^2.4.9",
+    "rimraf": "^5.0.5",
+    "rxjs": "^7.8.1",
+    "sanity": "3.16.5-pink-lizard.39",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "rxjs": "^7.8.1",
+    "sanity": "3.16.5-pink-lizard.39",
     "styled-components": "^5.3.11"
   },
   "engines": {
