--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -101,20 +101,22 @@
   },
   "dependencies": {
     "@sanity/ui": "^1.8.2",
-    "channels": "workspace:*",
-    "sanity": "3.16.5-pink-lizard.39"
+    "channels": "workspace:*"
   },
   "devDependencies": {
+    "@sanity/pkg-utils": "^2.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "styled-components": "^5.3.11",
+    "sanity": "3.16.5-pink-lizard.39",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "sanity": "3.16.5-pink-lizard.39",
     "styled-components": "^5.3.11"
   },
   "engines": {
