chore(overlays): add history dep

--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -111,6 +111,7 @@
     "@sanity/ui": "^1.8.2",
     "@vercel/stega": "0.1.0",
     "channels": "workspace:*",
+    "history": "^5.3.0",
     "nanoid": "^5.0.1",
     "sanity": "3.16.5-pink-lizard.39",
     "valibot": "^0.17.1",
