chore: channels should be a devDependency

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -100,11 +100,11 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/ui": "^1.8.2",
-    "channels": "workspace:*"
+    "@sanity/ui": "^1.8.2"
   },
   "devDependencies": {
     "@sanity/pkg-utils": "^2.4.9",
+    "channels": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
