chore: move workspace packages to devDependencies

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -110,7 +110,8 @@
     "react-is": "^18.2.0",
     "styled-components": "^5.3.11",
     "sanity": "3.16.5-pink-lizard.39",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "visual-editing-helpers": "workspace:*"
   },
   "peerDependencies": {
     "react": "^18.2.0",
