--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -110,7 +110,7 @@
     "@sanity/icons": "^2.4.1",
     "@sanity/ui": "^1.8.2",
     "@vercel/stega": "0.1.0",
-    "channels": "workspace:*",
+    "history": "^5.3.0",
     "nanoid": "^5.0.1",
     "sanity": "3.16.5-pink-lizard.39",
     "valibot": "^0.17.1"
@@ -122,6 +122,7 @@
     "@types/styled-components": "^5.1.27",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "channels": "workspace:*",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -135,6 +136,7 @@
     "rimraf": "^5.0.1",
     "styled-components": "^5.3.11",
     "typescript": "^5.2.2",
+    "visual-editing-helpers": "workspace:*",
     "vitest": "^0.34.4"
   },
   "peerDependencies": {
