--- a/packages/channels/package.json
+++ b/packages/channels/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "pkg build --strict && pkg --strict",
-    "lint": "eslint --max-warnings 0 .",
+    "lint": "eslint .",
     "prepublishOnly": "npm run build",
     "test": "vitest",
     "watch": "pkg watch --strict"
