--- a/packages/preview-kit/package.json
+++ b/packages/preview-kit/package.json
@@ -131,7 +131,7 @@
     "build": "pkg build --strict && pkg --strict",
     "watch": "pnpm build watch",
     "coverage": "vitest run --coverage",
-    "lint": "eslint --max-warnings 0 .",
+    "lint": "eslint .",
     "prepublishOnly": "pnpm run build",
     "release": "semantic-release || semantic-release --dry-run --debug",
     "test": "vitest",
